[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["Xian Wu <xianwuusa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
etcd3 = "^0.12.0"
protobuf = "==3.20.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
